// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline-opinion__OpinionText-aqlxmn-0 hYEoOi"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`2. with a very long byline 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline-opinion__OpinionText-aqlxmn-0 hYEoOi"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 kvZTih"
  >
    , Environment Editor | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline-opinion__OpinionText-aqlxmn-0 hYEoOi"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 kvZTih"
  >
    , Environment Editor | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline-opinion__OpinionText-aqlxmn-0 hYEoOi"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 kvZTih"
  >
    , Environment Editor
  </div>
</div>
`;
